--- a/tabele.html
+++ b/tabele.html
@@ -39,7 +39,7 @@
 					W pierwszych trzech seriach zespół dr. House'a tworzyli: dr Allison Cameron (Jennifer Morrison), dr Robert Chase (Jesse Spencer) i dr Eric Foreman (Omar Epps), od czwartej serii dr Chris Taub (Peter Jacobson), dr Lawrence Kutner (Kal Penn) oraz dr Remy "Trzynastka" Hadley (Olivia Wilde), w siódmym sezonie w zespole pojawiła się Martha Masters (Amber Tamblyn), a w ósmym do zespołu dochodzą dr Chi Park (Charlyne Yi) oraz lekarka z więzienia dr Jessica Adams (Odette Annable). Ponadto serial ukazuje prywatne życie House'a i członków jego zespołu, najlepszego i jedynego przyjaciela dr. Jamesa Wilsona (Robert Sean Leonard), ordynatora oddziału onkologii, oraz dr Lisy Cuddy (Lisa Edelstein), dyrektor szpitala Princeton‑Plainsboro.
 			</td>
 			<td width="180" valign="top" bgcolor="lightgray" align="center">
-				<img src="reklama.jpg" />
+				<img src="img/reklama.jpg" />
 			</td>
 		</tr>
 		<tr>
