--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             from the past. All the transition music used on the podcast is written and recorded in-house by Sebastian.
         </div>
         <div id="ad">
-            <img src="img/reklama.jpg" />
+            <img src="img/reklama.jpg" width="160px" height="600px" />
         </div>
         <div id="footer">
-            The best podcasts - TOP 5! &copy; All rights reserved
+            <h3>The best podcasts - TOP 5! &copy; All rights reserved</h3>
         </div>
     </div>
 
