--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
         </div>
         <div id="nav">
             Our fake history <br>
-            Stuff you should know <br>
+            <div id="multiline_name" style="line-height: normal;">
+                Stuff you should know
+            </div>
             Ted Daily Talk <br>
             Ted Radio Our <br>
             Shut up, brain! <br>
         </div>
         <div id="content">
+            <h3>Our fake history</h3>
             Our Fake History is an award-winning podcast about myths people think are history and history that might be
             hidden in myths. Have you ever heard that old story about how Napoleon shot the nose off the sphinx, or that
             Shakespeare was an illiterate fraud, or that Queen Elizabeth was actually a man? This show explores those
@@ -37,6 +40,18 @@
             The podcast is produced in Toronto, Canada, by Sebastian Major with help from his wife Beth Lorimer.
             Sebastian is a teacher, musician, and storyteller who is passionate about all things weird and wonderful
             from the past. All the transition music used on the podcast is written and recorded in-house by Sebastian.
+            <br /> <br />
+            <div>
+                <br>
+                <h4>Example episode</h4>
+                <br>
+            </div>
+            <div id="audio">
+                <audio controls>
+                    <source src="audio/Announcement_-_podcast_hiatus_2019.mp3" type="audio/mp3">
+                    Your browser doesn't support audio files
+                </audio>
+            </div>
         </div>
         <div id="ad">
             <img src="img/reklama.jpg" width="160px" height="600px" />
