change from reklama.jpg to ad.jpg

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div id="ad">
-            <img src="img/reklama.jpg" width="160px" height="600px" />
+            <img src="img/ad.jpg" width="160px" height="600px" />
         </div>
         <div id="footer">
             <h3>The best podcasts - TOP 5! &copy; All rights reserved</h3>
