add to image path url adress

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div id="ad">
-            <img src="img/ad.jpg" alt="Girl in a jacket" width="160px" height="600px" />
+            <img src="https://wz7475.github.io/strona2/img/ad.jpg" alt="Girl in a jacket" width="160px" height="600px" />
         </div>
         <div id="footer">
             <h3>The best podcasts - TOP 5! &copy; All rights reserved</h3>
