change image path to main dir

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div id="ad">
-            <img src="https://wz7475.github.io/strona2/img/ad.jpg" alt="ad picture" width="150px" height="580px" />
+            <img src="ad.jpg" alt="ad picture" width="150px" height="580px" />
         </div>
         <div id="footer">
             <h3>The best podcasts - TOP 5! &copy; All rights reserved</h3>
